--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.19",
+    "@types/node": "20.4.9",
+    "@types/react": "18.2.20",
     "@types/react-dom": "^18.2.7",
     "eslint": "8.31.0",
     "eslint-config-next": "^13.4.13",
-    "typescript": "^5.1.6"
+    "typescript": "5.1.6"
   }
 }
